--- a/CSS/index.css
+++ b/CSS/index.css
@@ -473,7 +473,7 @@ main #about h1, main #competences h1, main #diplomas h1, main #portfolio h1, mai
 
 #diplomas #vertical-line{
   width: 10px;
-  height: 2300px;
+  height: 2000px;
   background-image: linear-gradient(to bottom, #e6e9f0 0%, #cf556c 10%, #ff8c7f 31%, #f99185 52%, #cf556c 78%, white 100%);
   margin-left: 5%;
 }
@@ -1053,4 +1053,51 @@ footer .fa-snapchat-ghost{
 .open img{
   height: 75px;
   width: 75px;
+}
+
+
+
+/* MEDIA QUERIES */
+
+@media only screen and (max-width: 600px) {
+  header{
+    height: 800px;
+  }
+  header #lang{
+    transform: scale(0.8);
+    width: 20%;
+    margin: 0;
+  }
+
+  #presentation #title{
+    transform: scale(0.7);
+    width: 100%;
+    margin: 0 0 5% 0;
+  }
+  #presentation #menu{
+    transform: scale(0.7);
+    margin: -150px 0 0 0;
+  }
+  #about #introduction-me img{
+    text-align: center;
+    height: 100px;
+    width: 100px;
+  }
+  #about #introduction-l{
+    transform: scale(0.9);
+    margin: 0;
+    width: 100%;
+    font-size: 75%;
+  }
+  footer #clapperboard{
+    transform: scale(0.6);
+  }
+  .chat-box{
+
+  }
+  footer #social{
+    transform: scale(0.4);
+    position: relative;
+  }
+
 }
