--- a/PHTML/contact-fr.phtml
+++ b/PHTML/contact-fr.phtml
@@ -47,10 +47,10 @@
 	<div id="downloads">
 		<div id="downloads-1">
 			<img src="IMG/80449733-5883-4546-98ef-8c56880403de-d36908f7-654c-401e-b136-03c07f344c42-v1.png">
-			<h1>Télécharger mon CV sous PDF</h1>
+			<h1><?= $downloadcv ;?></h1>
 		</div>
 		<div id="downloads-2">
-			<h1>1. Sélectionner une langue</h1>
+			<h1><?= $selectalanguage ;?></h1>
 			<br/>
 			<select>
 				<option disabled="disabled" selected="selected" value="0">-</option>
